--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
         <a class="menu__item" href="#">Sign Up</a>
       </div>
     </nav>
-    <img class="header-bg" src="images/illustration-working.svg" alt="illustration-working">
-    <h1>More than just shorter links</h1>
-    <p>Build your brand’s recognition and get detailed insights on how your links are performing.</p>
-    <button class="get-started">Get Started</button>
+    <section class="header__intro">
+      <img class="header-bg" src="images/illustration-working.svg" alt="illustration-working">
+      <div class="header__intro--texts">
+        <h1>More than just shorter links</h1>
+        <p>Build your brand’s recognition and get detailed insights on how your links are performing.</p>
+        <button class="get-started">Get Started</button>
+      </div>
+    </section>
   </header>
 
       <!-- MAIN -->
@@ -54,35 +58,37 @@
     <section class="info">
       <h2>Advanced Statistics</h2>
       <p>Track how your links are performing across the web with our advanced statistics dashboard.</p>
-      <div class="card">
-        <div class="img__container">
-          <picture class="card__picture">
-            <img class="card__img" src="images/icon-brand-recognition.svg" alt="Brand Recognition">
-          </picture>
-        </div>
-        <h3>Brand Recognition</h3>
-        <p>Boost your brand recognition with each click. Generic links don’t mean a thing. Branded links help instil confidence in your content.</p>
-      </div>
-      <div class="card">
-        <div class="img__container">
-          <picture class="card__picture">
-            <img class="card__img" src="images/icon-detailed-records.svg" alt="Detailed Records">
-          </picture>
-        </div>
-        <h3>Detailed Records</h3>
-        <p>Gain insights into who is clicking your links. Knowing when and where people engage with your content helps inform better decisions.</p>
-      </div>
-      <div class="card">
-        <div class="img__container">
-          <picture class="card__picture">
-            <img class="card__img" src="images/icon-fully-customizable.svg" alt="Fully Customizable">
-          </picture>
+      <section class="cards">        
+        <div class="card">
+          <div class="img__container">
+            <picture class="card__picture">
+              <img class="card__img" src="images/icon-brand-recognition.svg" alt="Brand Recognition">
+            </picture>
           </div>
-        <h3>Fully Customizable</h3>
-        <p>Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.</p>
-      </div>
+          <h3>Brand Recognition</h3>
+          <p>Boost your brand recognition with each click. Generic links don’t mean a thing. Branded links help instil confidence in your content.</p>
+        </div>
+        <div class="card">
+          <div class="img__container before-bar">
+            <picture class="card__picture">
+              <img class="card__img" src="images/icon-detailed-records.svg" alt="Detailed Records">
+            </picture>
+          </div>
+          <h3>Detailed Records</h3>
+          <p>Gain insights into who is clicking your links. Knowing when and where people engage with your content helps inform better decisions.</p>
+        </div>
+        <div class="card">
+          <div class="img__container before-bar">
+            <picture class="card__picture">
+              <img class="card__img" src="images/icon-fully-customizable.svg" alt="Fully Customizable">
+            </picture>
+          </div>
+          <h3>Fully Customizable</h3>
+          <p>Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.</p>
+        </div>
+      </section>
     </section>
-
+      
     <section class="boost">
       <h2>Boost your links today</h2>
       <button class="get-started">Get Started</button>
